src/objects/OCIO_Total_Amount_Purchased__c.object
<CustomObject>
    <description>This object is for the Office of Civil Rights - Title VI application and used to track the total amount purchased value for donee organizations.</description>
    <fields>
        <fullName>OCR_Donee_Organization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Donee Organization</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Total_Amount_Purchased</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OCR_Total_Amount_Purchased__c</fullName>
        <label>Total Amount Received</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OCR_Year__c</fullName>
        <label>Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2005</fullName>
                </value>
                <value>
                    <fullName>2006</fullName>
                </value>
                <value>
                    <fullName>2007</fullName>
                </value>
                <value>
                    <fullName>2008</fullName>
                </value>
                <value>
                    <fullName>2009</fullName>
                </value>
                <value>
                    <fullName>2010</fullName>
                </value>
                <value>
                    <fullName>2011</fullName>
                </value>
                <value>
                    <fullName>2012</fullName>
                </value>
                <value>
                    <fullName>2013</fullName>
                </value>
                <value>
                    <fullName>2014</fullName>
                </value>
                <value>
                    <fullName>2015</fullName>
                </value>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>2019</fullName>
                </value>
                <value>
                    <fullName>2020</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Total Amount Received</label>
    <nameField>
        <displayFormat>TVIAMT-{0000000}</displayFormat>
        <label>Amount Received ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Total Amount Received</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Amount_Purchased_Not_Negative</fullName>
        <active>true</active>
        <description>Total Amount Purchased should not be negative.</description>
        <errorConditionFormula>OCR_Total_Amount_Purchased__c &lt; 0</errorConditionFormula>
        <errorMessage>Total Amount Purchased should not be negative.</errorMessage>
    </validationRules>
</CustomObject>